--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -5,8 +5,16 @@
     .nav-items{
         flex-direction: column;
         gap: 20px;
+        margin-top: 10px;
     }
     .follous{
         margin-top: 10px;
+    }
+    .banner-container{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .banner-items{
+        width: 100%;
     }
 }
