--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,14 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&family=Lato:wght@400;900&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600;700&family=Work+Sans:wght@400;500;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&family=Lato:wght@400;900&family=Open+Sans:wght@400;700;800&family=Poppins:wght@300;400;500;600;700&family=Work+Sans:wght@400;500;700;800&display=swap');
+
 
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.fluid-img{
+    width: 100%;
 }
 body{
     font-family: 'EB Garamond', serif;
@@ -13,7 +19,7 @@ body{
 }
 .nav-container{
     max-width: 1440px;
-    margin: 0 auto 0;
+    margin: 50px auto 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,4 +52,64 @@ body{
 .yt-icon{
     margin-right: 5px;
     margin-left: 5px;
+}
+/* banner styles starts here  */
+.banner-container{
+    max-width: 1440px;
+    height: 80vh;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+
+}
+.banner-items{
+    width: 50%;
+    background-image: url("../images/Group\ 14.png");
+    background-position: co;
+    background-size: contain;
+}
+.banner-texts{
+    align-items: center;
+    max-width: 60%;
+    margin: 100px auto;
+}
+.banner-semi-title{
+    color: #0B0223;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+.banner-main-title{
+    font-size: 4rem;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    text-transform: uppercase;
+    font-weight: 800;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.no-download{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.banner-texts p{
+    color: #3C354F;
+}
+.banner-img{
+    width: 50%;
+}
+.btn{
+    padding: 15px 30px;
+    border-radius: 30px;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    margin-top: 30px ;
+    margin-right: 10px;
+}
+.pink{
+    background-color: #F948B2;
+}
+.blue{
+    background-color: #4EC5F7;
 }
