--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -8,13 +8,22 @@
         margin-top: 10px;
     }
     .follous{
-        margin-top: 10px;
+        margin-top: 5px;
     }
     .banner-container{
-        flex-direction: column-reverse;
+        flex-direction: column;
         align-items: center;
+        margin-top: 30px;
+        height: 100%;
     }
     .banner-items{
         width: 100%;
+        margin-top: 20px;
+    }
+    .game-items{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .games-container{
+        margin-top: 60px;
     }
 }
