--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,3 +113,33 @@ body{
 .blue{
     background-color: #4EC5F7;
 }
+/* online games and video styles here  */
+.games-container{
+    max-width: 1400px;
+    margin: 50px auto 0;
+    text-align: center;
+}
+.games-title{
+    font-size: 2.5rem;
+    color: #0B0223 ;
+}
+.text-games{
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    text-transform: uppercase;
+    font-weight: 800;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.semi-text{
+    color: #3C354F;
+    font-size: 1rem;
+    margin-top: 20px;
+}
+.game-items{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-top: 30px;
+}
