--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,3 +143,21 @@ body{
     gap: 20px;
     margin-top: 30px;
 }
+/* play section styles starts here  */
+.play-container{
+    max-width: 1400px;
+    margin: 50px auto 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: right;
+}
+.play-img{
+    position: relative;
+}
+
+.angela-img{
+    position: absolute;
+    top: 60%;
+    left:-25%;
+}
