--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -31,6 +31,7 @@
         padding: 20px;
         gap: 20px;
         text-align: center;
+        height: 100%;
     }
     .angela-img{
         width: 40%;
@@ -39,4 +40,12 @@
     .boy-img{
         width: 80%;
     }
+    .arcade-container{
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .box{
+        width: 150px;
+    }
 }
+
