--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -47,5 +47,24 @@
     .box{
         width: 150px;
     }
+    .footer-container{
+        padding: 15px;
+        height: 100%;
+        width: 100%;
+        font-size: 0.8rem;
+    }
+    .footer-items{
+      width: 100%;
+      font-size: 0.8rem;
+    }
+    .footer-icons{
+        width: 100%;
+    }
+    .terms-container{
+        width: 100%;
+    }
+    .credit-container{
+        width: 100%;
+    }
 }
 
