--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -22,6 +22,12 @@
     }
     .game-items{
         grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        justify-content: center;
+    }
+    .game-item img{
+        width: 100%;
+        padding: 20px;
     }
     .games-container{
         margin-top: 60px;
