--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -20,6 +20,9 @@
         width: 100%;
         margin-top: 20px;
     }
+    .btn{
+        width: 50%;
+    }
     .game-items{
         grid-template-columns: repeat(1, 1fr);
         width: 100%;
@@ -75,3 +78,57 @@
     }
 }
 
+/* for tablet view responsive here  */
+@media screen and (min-width:577px) and (max-width: 960px) {
+    .nav-container{
+        flex-direction: column;
+    }
+    .nav-items{
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 10px;
+    }
+    .banner-container{
+        align-items: center;
+        margin-top: 30px;
+        height: 100%;
+    }
+    .banner-container img{
+        width: 100%;
+    }
+    .btn{
+        width: 100%;
+    }
+    .game-items{
+        grid-template-columns: repeat(2,1fr);
+        padding-left: 60px;
+    }
+    .play-container{
+        flex-direction: column;
+        padding-left: 20px;
+        gap: 20px;
+    }
+    .footer-container{
+        width: 100%;
+    }
+    .footer-items{
+        width: 100%;
+    }
+    .footer-icons{
+        width: 100%;
+        /* justify-content: space-around; */
+    }
+    .terms-container{
+        width: 100%;
+    }
+    .angela-img{
+        width: 40%;
+        left: 0px;
+    }
+    .boy-img{
+        width: 80%;
+    }
+    .play-container{
+        text-align: center;
+    }
+ }
