--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,6 +52,10 @@
     .arcade-container{
         flex-wrap: wrap;
         width: 100%;
+        padding-right: 30px;
+    }
+    .arcade-names{
+        font-size: 0.8rem;
     }
     .box{
         width: 100px;
