--- a/styles/styles.css
+++ b/styles/styles.css
@@ -245,6 +245,8 @@ body{
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    border: 5px solid #F948B2;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
